add color for nav

--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
         <h2>Technicien polyvalent informatique</h2>
     </header>
     <main>
-        <nav><!--Barre dédiée aux coordonnées-->
-            <div>
-                <address>
-                    <p>4 rue Jean-Jacques Rousseau <br/>
-                        02800 Crouy</p>
-                </address>
-            </div>
-            <div>
+        <nav id="flex-col"><!--Barre dédiée aux coordonnées-->
+                <address></p>4 rue Jean-Jacques Rousseau <br/>
+                        02800 Crouy</address>
                 <p>julien.turck.tic@gmail.com</p>
-            </div>
-            <div>
-                0603652777
-            </div>  
+                <p>0603652777</p>
         </nav>
        <section><!--Section dédiée aux à côtés-->
             <div>
