add colors of body

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Technicien polyvalent informatique</h2>
     </header>
     <main>
-        <nav id="flex-col"><!--Barre dédiée aux coordonnées-->
+        <nav id="coordonnees"><!--Barre dédiée aux coordonnées-->
                 <address></p>4 rue Jean-Jacques Rousseau <br/>
                         02800 Crouy</address>
                 <p>julien.turck.tic@gmail.com</p>
@@ -43,7 +43,7 @@
                 </ul>
             </div>
        </section>
-       <section><!--Section dédiée aux compétences-->
+       <section id="competences"><!--Section dédiée aux compétences-->
         <div>
             <h3>Expérences professionnelles</h3>
             <h4>Technicien de maintenance informatique chez ADICA </h4>
