organization of header

--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
 </head>
 <body>
     <header>
-        <h1>JULIEN TURCK</h1>
-        <h2>Technicien polyvalent informatique</h2>
+        <section>
+
+        </section>
+        <section>
+            <h1>JULIEN TURCK</h1>
+        </section>
+        <section>
+            <h2>Technicien polyvalent informatique</h2>
+        </section>
+        <section id="coordonnees"><!--Barre dédiée aux coordonnées-->
+            <address>
+                4 rue Jean-Jacques Rousseau <br/>
+                02800 Crouy
+            </address>
+            <address>julien.turck.tic@gmail.com</address>
+            <address>0603652777</address>
+        </section>
     </header>
     <main>
-        <nav id="coordonnees"><!--Barre dédiée aux coordonnées-->
-                <address></p>4 rue Jean-Jacques Rousseau <br/>
-                        02800 Crouy</address>
-                <p>julien.turck.tic@gmail.com</p>
-                <p>0603652777</p>
-        </nav>
        <section><!--Section dédiée aux à côtés-->
             <div>
                 <h3>A propos</h3>
