organization of the main

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </section>
     </header>
     <main>
-       <section><!--Section dédiée aux à côtés-->
+       <section id="acote"><!--Section dédiée aux à côtés-->
             <div>
                 <h3>A propos</h3>
-                <p>Vosgien d'origine, je suis devenu axonnais en 2021 pour rejoindre ma compagne avec qui j'ai eu 2 enfants. Je suis actuellement technicien de maintenance informatique pour l'Agence Départementale d'Ingénierie pour les Collectivités de l'Aisne. Le secteur informatique est un secteur que je n'ai rejoint qu'il y a quelques années par le biais du monde des bibliothèques. Toutefois, ce n'est que la suite logique de mon parcours du fait de mon appétence pour ce domaine depuis mon adolescence.</p>
+                <p>Toutefois, ce n'est que la suite logique de mon parcours du fait de mon appétence pour ce domaine depuis mon adolescence.</p>
             </div>
             <div>
                 <h3>Langues parlées</h3>
