--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
             <h2>Technicien polyvalent informatique</h2>
         </section>
         <section id="coordonnees"><!--Barre dédiée aux coordonnées-->
-            <address>
+            <address id="adresse">
                 4 rue Jean-Jacques Rousseau <br/>
                 02800 Crouy
             </address>
             <address>julien.turck.tic@gmail.com</address>
-            <address>0603652777</address>
+            <address id="telephone">0603652777</address>
         </section>
     </header>
     <main>
        <section id="acote"><!--Section dédiée aux à côtés-->
             <div>
                 <h3>A propos</h3>
-                <p>Toutefois, ce n'est que la suite logique de mon parcours du fait de mon appétence pour ce domaine depuis mon adolescence.</p>
+                <p id="apropos">Vosgien d'origine, je suis devenu axonais en 2021 pour rejoindre ma compagne avec qui j'ai eu 2 enfants. Je suis actuellement technicien de maintenance informatique pour l'Agence Départementale d'Ingénierie pour les Collectivités de l'Aisne. Je n'ai rejoint le secteur informatique que depuis quelques années par le biais du monde des bibliothèques. Toutefois, ce n'est que la suite logique de mon parcours du fait de mon appétence pour ce domaine depuis mon adolescence.
+            </p>
             </div>
             <div>
                 <h3>Langues parlées</h3>
