add photo and her configuration

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <section>
-
-        </section>
+        <figure>
+            <img src="assets/pictures/photo.png" alt="photo d'idendité de Julien TURCK">
+        </figure>
         <section>
             <h1>JULIEN TURCK</h1>
         </section>
