add link mailto and tel

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
                 <a href="https://maps.app.goo.gl/umiQZudW4Q86DRFt8" target="_blank">4 rue Jean-Jacques Rousseau <br/>
                 02800 Crouy</a>
             </address>
-            <address>julien.turck.tic@gmail.com</address>
-            <address id="telephone">0603652777</address>
+            <address>
+                <a href="mailto:julien.turck.tic@gmail.com">julien.turck.tic@gmail.com</a>
+            </address>
+            <address id="telephone">
+                <a href="tel:0603652777">0603652777</a>
+            </address>
         </section>
     </header>
     <main>
