organization of logos

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
        </section> 
     </main>
     <footer>
-        <section>
+        <section id="bandeau_reseaux_sociaux">
             <figure>
                 <img src="assets/pictures/linkedin.png" alt="logo du réseau social Linkedin">
             </figure>
