add links socials networks

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
     <footer>
         <section id="bandeau_reseaux_sociaux">
             <figure>
-                <img src="assets/pictures/linkedin.png" alt="logo du réseau social Linkedin">
+                <a href="https://fr.linkedin.com/" target="_blank"><img src="assets/pictures/linkedin.png" alt="logo du réseau social Linkedin"></a>
             </figure>
             <figure>
-                <img src="assets/pictures/twitter.png" alt="logo du réseau social Twitter">
+                <a href="https://twitter.com/?lang=fr" target="_blank"><img src="assets/pictures/twitter.png" alt="logo du réseau social Twitter"></a>
             </figure>
             <figure>
-                <img src="assets/pictures/github.png" alt="logo du réseau social Github">
+                <a href="https://github.com/" target="_blank"><img src="assets/pictures/github.png" alt="logo du réseau social Github"></a>
             </figure>
         </section>
         <section>
