--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon CV</title>
     <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="shortcut icon" type="image/png" href="assets/pictures/favicon.png"
 </head>
 <body>
     <header>
