add hover of identity photo

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
     <footer>
         <section id="bandeau_reseaux_sociaux">
             <figure>
-                <a href="https://fr.linkedin.com/" target="_blank"><img src="assets/pictures/linkedin.png" alt="logo du réseau social Linkedin"></a>
+                <a href="https://fr.linkedin.com/" target="_blank"><img id="social" src="assets/pictures/linkedin.png" alt="logo du réseau social Linkedin"></a>
             </figure>
             <figure>
-                <a href="https://twitter.com/?lang=fr" target="_blank"><img src="assets/pictures/twitter.png" alt="logo du réseau social Twitter"></a>
+                <a href="https://twitter.com/?lang=fr" target="_blank"><img id="social" src="assets/pictures/twitter.png" alt="logo du réseau social Twitter"></a>
             </figure>
             <figure>
-                <a href="https://github.com/" target="_blank"><img src="assets/pictures/github.png" alt="logo du réseau social Github"></a>
+                <a href="https://github.com/" target="_blank"><img id="social" src="assets/pictures/github.png" alt="logo du réseau social Github"></a>
             </figure>
         </section>
         <section>
