add click of identity photo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <figure id="figure_photo">
-            <img id="photo_identite" src="assets/pictures/photo.png" alt="photo d'idendité de Julien TURCK">
+            <a href="assets/pictures/photo.png" target="_blank"><img id="photo_identite" src="assets/pictures/photo.png" alt="photo d'idendité de Julien TURCK"></a>
         </figure>
         <section>
             <h1>JULIEN TURCK</h1>
